# seed

express_next/: run  vscode.code-workspace
fastapi_next/: .gitignore  README.md  run  vscode.code-workspace
fastapi_next/identity/: README.md  mypy.ini  pyproject.toml
fastapi_next/identity/alembic/: env.py
fastapi_next/identity/alembic/versions/: cbd32d48b79c_init.py
fastapi_next/identity/app/: console.py  database.py  dependencies.py  main.py
fastapi_next/identity/app/config/: __init__.py  base_config.py  dev.py  prod.py  test.py
fastapi_next/identity/app/domain/: errors.py  orm_base.py
fastapi_next/identity/app/domain/auth/: auth_service.py
fastapi_next/identity/app/domain/auth/models/: user.py
fastapi_next/identity/app/domain/auth/schemas/: pass_reset_schemas.py  session_schemas.py  user_schemas.py
fastapi_next/identity/app/domain/orgs/: orgs_service.py
fastapi_next/identity/app/domain/orgs/models/: membership.py  organization.py
fastapi_next/identity/app/domain/orgs/schemas/: membership_schemas.py  organization_schemas.py
fastapi_next/identity/app/routers/: membership_router.py  organization_router.py  pass_reset_router.py  session_router.py  user_router.py
fastapi_next/identity/tests/: conftest.py  example_test.py
github-actions-ecs-infra/: README.md
tf-ecs-infra/: 00_init.tf  01_locals.tf  02_variables.tf  03_provider.tf  04_vpc.tf  05_ecr.tf  06_security_groups.tf  07_load_balancer.tf  08_target_groups.tf  09_alb_listener_rules.tf  10_databases.tf  11_redises.tf  12_rabbitmq.tf  13_iam.tf  14_ses.tf  15_log_groups.tf  18_services.tf  (+7 more)
(+31 files in other folders)
